web service, autres couches

--- a/Rapport.tex
+++ b/Rapport.tex
@@ -38,16 +38,16 @@
 
 
 %%%%%%%%%% Code source %%%%%%%%%%
-%\usepackage{listings}
-%\lstset{
-%	showstringspaces = false,	% masquer les espaces
-%	tabsize = 4,				% nombre d'espace par tabulation
-%	basicstyle = \ttfamily,		% caractères de même taille
-%	xleftmargin = 30 pt,		% marge à gauche
-%	xrightmargin = 0 pt,		% marge à droite
-%	aboveskip = -1 pt,			% espace au dessus de la zone
-%	belowskip = -1 pt			% espace en dessous de la zone
-%}
+\usepackage{listings}
+\lstset{
+	aboveskip = -1 pt,			% espace au dessus de la zone
+	basicstyle = \ttfamily,		% caractères de même taille
+	belowskip = -1 pt,			% espace en dessous de la zone
+	showstringspaces = false,	% masquer les espaces
+	tabsize = 4,				% nombre d'espace par tabulation
+	xleftmargin = 30 pt,		% marge à gauche
+	xrightmargin = 0 pt,		% marge à droite
+}
 
 
 %%%%%%%%%% Informations %%%%%%%%%%
