--- a/src/partie_2.tex
+++ b/src/partie_2.tex
@@ -162,20 +162,11 @@ La figure \ref{WCF_RIA_Services} représente les échanges entre la partie clien
 
 \subsubsection{Silverlight}
 
-Microsoft \textit{Silverlight} est un plugin pour navigateur web, permettant le développement d'applications riches, concurrente directe d'Adobe Flash.
+Microsoft \textit{Silverlight} est un plugin pour navigateur web, permettant le développement d'applications riches. Le but est de pousser plus loin l'expérience utilisateur du web 2.0. Initialement prévu pour fonctionner dans un navigateur, les programmes peuvent être installés directement sur l'ordinateur ("out of browser"), et permettent de développer des application pour Windows Phone 7.
+
+Cette technologie nécessite l'installation du plugin, qui est un sous-ensemble de Microsoft .NET Framework. L'avantage est d'être cross-browser (Internet Explorer, Firefox, Chrome, \ldots) et cross-platform (Windows, OS-X et Linux, via le projet open-source Moonlight). Les applications fonctionnent donc dans une "sandbox" (bac a sable) qui permet de garantir une sécurité pour l'utilisateur et le serveur.
 
 
-Pour la technologie web 2.0 (ajax et jQueries)
-cross plateform (Moonlight) et navigateur
-concurrent flash
-version légère du framework 3.5
-hors du navigateur
-
-
-Similaire à WPF
-
-Page contenue dans un conteneur asp.net
-bac a sable (sécurité, fenêtre de dialog limitées, ...)
 
 
 
